lab3/Code/syntax.output
Terminals unused in grammar

   LOWER_THAN_ELSE


Grammar

    0 $accept: Program $end

    1 Program: ExtDefList

    2 ExtDefList: ExtDef ExtDefList
    3           | %empty

    4 ExtDef: Specifier ExtDecList SEMI
    5       | Specifier SEMI
    6       | Specifier FunDec CompSt
    7       | Specifier FunDec error SEMI
    8       | Specifier FunDec error
    9       | error SEMI

   10 ExtDecList: VarDec
   11           | VarDec COMMA ExtDecList

   12 Specifier: TYPE
   13          | StructSpecifier

   14 StructSpecifier: STRUCT OptTag LC DefList RC
   15                | STRUCT Tag

   16 OptTag: ID
   17       | %empty

   18 Tag: ID

   19 VarDec: ID
   20       | VarDec LB INT RB
   21       | VarDec LB error RB

   22 FunDec: ID LP VarList RP
   23       | ID LP RP
   24       | error RP

   25 VarList: ParamDec COMMA VarList
   26        | ParamDec

   27 ParamDec: Specifier VarDec
   28         | error RP
   29         | error COMMA

   30 CompSt: LC DefList StmtList RC
   31       | LC error RC

   32 StmtList: Stmt StmtList
   33         | %empty

   34 Stmt: Exp SEMI
   35     | CompSt
   36     | RETURN Exp SEMI
   37     | IF LP Exp RP Stmt
   38     | IF LP Exp RP Stmt ELSE Stmt
   39     | WHILE LP Exp RP Stmt
   40     | IF LP Exp RP error ELSE Stmt

   41 DefList: Def DefList
   42        | %empty

   43 Def: Specifier DecList SEMI
   44    | error SEMI

   45 DecList: Dec
   46        | Dec COMMA DecList

   47 Dec: VarDec
   48    | VarDec ASSIGNOP Exp

   49 Exp: Exp ASSIGNOP Exp
   50    | Exp AND Exp
   51    | Exp OR Exp
   52    | Exp RELOP Exp
   53    | Exp PLUS Exp
   54    | Exp MINUS Exp
   55    | Exp STAR Exp
   56    | Exp DIV Exp
   57    | LP Exp RP
   58    | MINUS Exp
   59    | NOT Exp
   60    | ID LP Args RP
   61    | ID LP RP
   62    | Exp LB Exp RB
   63    | Exp DOT ID
   64    | ID
   65    | INT
   66    | FLOAT
   67    | Exp LB error RB

   68 Args: Exp COMMA Args
   69     | Exp


Terminals, with rules where they appear

$end (0) 0
error (256) 7 8 9 21 24 28 29 31 40 44 67
TYPE (258) 12
INT (259) 20 65
FLOAT (260) 66
ID (261) 16 18 19 22 23 60 61 63 64
RELOP (262) 52
STRUCT (263) 14 15
RETURN (264) 36
IF (265) 37 38 40
ELSE (266) 38 40
WHILE (267) 39
PLUS (268) 53
MINUS (269) 54 58
SEMI (270) 4 5 7 9 34 36 43 44
COMMA (271) 11 25 29 46 68
ASSIGNOP (272) 48 49
STAR (273) 55
DIV (274) 56
AND (275) 50
OR (276) 51
DOT (277) 63
NOT (278) 59
LP (279) 22 23 37 38 39 40 57 60 61
RP (280) 22 23 24 28 37 38 39 40 57 60 61
LB (281) 20 21 62 67
RB (282) 20 21 62 67
LC (283) 14 30 31
RC (284) 14 30 31
LOWER_THAN_ELSE (285)


Nonterminals, with rules where they appear

$accept (31)
    on left: 0
Program (32)
    on left: 1, on right: 0
ExtDefList (33)
    on left: 2 3, on right: 1 2
ExtDef (34)
    on left: 4 5 6 7 8 9, on right: 2
ExtDecList (35)
    on left: 10 11, on right: 4 11
Specifier (36)
    on left: 12 13, on right: 4 5 6 7 8 27 43
StructSpecifier (37)
    on left: 14 15, on right: 13
OptTag (38)
    on left: 16 17, on right: 14
Tag (39)
    on left: 18, on right: 15
VarDec (40)
    on left: 19 20 21, on right: 10 11 20 21 27 47 48
FunDec (41)
    on left: 22 23 24, on right: 6 7 8
VarList (42)
    on left: 25 26, on right: 22 25
ParamDec (43)
    on left: 27 28 29, on right: 25 26
CompSt (44)
    on left: 30 31, on right: 6 35
StmtList (45)
    on left: 32 33, on right: 30 32
Stmt (46)
    on left: 34 35 36 37 38 39 40, on right: 32 37 38 39 40
DefList (47)
    on left: 41 42, on right: 14 30 41
Def (48)
    on left: 43 44, on right: 41
DecList (49)
    on left: 45 46, on right: 43 46
Dec (50)
    on left: 47 48, on right: 45 46
Exp (51)
    on left: 49 50 51 52 53 54 55 56 57 58 59 60 61 62 63 64 65 66
    67, on right: 34 36 37 38 39 40 48 49 50 51 52 53 54 55 56 57 58
    59 62 63 67 68 69
Args (52)
    on left: 68 69, on right: 60 68


State 0

    0 $accept: . Program $end

    error   shift, and go to state 1
    TYPE    shift, and go to state 2
    STRUCT  shift, and go to state 3

    $end  reduce using rule 3 (ExtDefList)

    Program          go to state 4
    ExtDefList       go to state 5
    ExtDef           go to state 6
    Specifier        go to state 7
    StructSpecifier  go to state 8


State 1

    9 ExtDef: error . SEMI

    SEMI  shift, and go to state 9


State 2

   12 Specifier: TYPE .

    $default  reduce using rule 12 (Specifier)


State 3

   14 StructSpecifier: STRUCT . OptTag LC DefList RC
   15                | STRUCT . Tag

    ID  shift, and go to state 10

    $default  reduce using rule 17 (OptTag)

    OptTag  go to state 11
    Tag     go to state 12


State 4

    0 $accept: Program . $end

    $end  shift, and go to state 13


State 5

    1 Program: ExtDefList .

    $default  reduce using rule 1 (Program)


State 6

    2 ExtDefList: ExtDef . ExtDefList

    error   shift, and go to state 1
    TYPE    shift, and go to state 2
    STRUCT  shift, and go to state 3

    $end  reduce using rule 3 (ExtDefList)

    ExtDefList       go to state 14
    ExtDef           go to state 6
    Specifier        go to state 7
    StructSpecifier  go to state 8


State 7

    4 ExtDef: Specifier . ExtDecList SEMI
    5       | Specifier . SEMI
    6       | Specifier . FunDec CompSt
    7       | Specifier . FunDec error SEMI
    8       | Specifier . FunDec error

    error  shift, and go to state 15
    ID     shift, and go to state 16
    SEMI   shift, and go to state 17

    ExtDecList  go to state 18
    VarDec      go to state 19
    FunDec      go to state 20


State 8

   13 Specifier: StructSpecifier .

    $default  reduce using rule 13 (Specifier)


State 9

    9 ExtDef: error SEMI .

    $default  reduce using rule 9 (ExtDef)


State 10

   16 OptTag: ID .
   18 Tag: ID .

    LC        reduce using rule 16 (OptTag)
    $default  reduce using rule 18 (Tag)


State 11

   14 StructSpecifier: STRUCT OptTag . LC DefList RC

    LC  shift, and go to state 21


State 12

   15 StructSpecifier: STRUCT Tag .

    $default  reduce using rule 15 (StructSpecifier)


State 13

    0 $accept: Program $end .

    $default  accept


State 14

    2 ExtDefList: ExtDef ExtDefList .

    $default  reduce using rule 2 (ExtDefList)


State 15

   24 FunDec: error . RP

    RP  shift, and go to state 22


State 16

   19 VarDec: ID .
   22 FunDec: ID . LP VarList RP
   23       | ID . LP RP

    LP  shift, and go to state 23

    $default  reduce using rule 19 (VarDec)


State 17

    5 ExtDef: Specifier SEMI .

    $default  reduce using rule 5 (ExtDef)


State 18

    4 ExtDef: Specifier ExtDecList . SEMI

    SEMI  shift, and go to state 24


State 19

   10 ExtDecList: VarDec .
   11           | VarDec . COMMA ExtDecList
   20 VarDec: VarDec . LB INT RB
   21       | VarDec . LB error RB

    COMMA  shift, and go to state 25
    LB     shift, and go to state 26

    $default  reduce using rule 10 (ExtDecList)


State 20

    6 ExtDef: Specifier FunDec . CompSt
    7       | Specifier FunDec . error SEMI
    8       | Specifier FunDec . error

    error  shift, and go to state 27
    LC     shift, and go to state 28

    CompSt  go to state 29


State 21

   14 StructSpecifier: STRUCT OptTag LC . DefList RC

    error   shift, and go to state 30
    TYPE    shift, and go to state 2
    STRUCT  shift, and go to state 3

    RC  reduce using rule 42 (DefList)

    Specifier        go to state 31
    StructSpecifier  go to state 8
    DefList          go to state 32
    Def              go to state 33


State 22

   24 FunDec: error RP .

    $default  reduce using rule 24 (FunDec)


State 23

   22 FunDec: ID LP . VarList RP
   23       | ID LP . RP

    error   shift, and go to state 34
    TYPE    shift, and go to state 2
    STRUCT  shift, and go to state 3
    RP      shift, and go to state 35

    Specifier        go to state 36
    StructSpecifier  go to state 8
    VarList          go to state 37
    ParamDec         go to state 38


State 24

    4 ExtDef: Specifier ExtDecList SEMI .

    $default  reduce using rule 4 (ExtDef)


State 25

   11 ExtDecList: VarDec COMMA . ExtDecList

    ID  shift, and go to state 39

    ExtDecList  go to state 40
    VarDec      go to state 19


State 26

   20 VarDec: VarDec LB . INT RB
   21       | VarDec LB . error RB

    error  shift, and go to state 41
    INT    shift, and go to state 42


State 27

    7 ExtDef: Specifier FunDec error . SEMI
    8       | Specifier FunDec error .

    SEMI  shift, and go to state 43

    $default  reduce using rule 8 (ExtDef)


State 28

   30 CompSt: LC . DefList StmtList RC
   31       | LC . error RC

    error   shift, and go to state 44
    TYPE    shift, and go to state 2
    STRUCT  shift, and go to state 3

    INT     reduce using rule 42 (DefList)
    FLOAT   reduce using rule 42 (DefList)
    ID      reduce using rule 42 (DefList)
    RETURN  reduce using rule 42 (DefList)
    IF      reduce using rule 42 (DefList)
    WHILE   reduce using rule 42 (DefList)
    MINUS   reduce using rule 42 (DefList)
    NOT     reduce using rule 42 (DefList)
    LP      reduce using rule 42 (DefList)
    LC      reduce using rule 42 (DefList)
    RC      reduce using rule 42 (DefList)

    Specifier        go to state 31
    StructSpecifier  go to state 8
    DefList          go to state 45
    Def              go to state 33


State 29

    6 ExtDef: Specifier FunDec CompSt .

    $default  reduce using rule 6 (ExtDef)


State 30

   44 Def: error . SEMI

    SEMI  shift, and go to state 46


State 31

   43 Def: Specifier . DecList SEMI

    ID  shift, and go to state 39

    VarDec   go to state 47
    DecList  go to state 48
    Dec      go to state 49


State 32

   14 StructSpecifier: STRUCT OptTag LC DefList . RC

    RC  shift, and go to state 50


State 33

   41 DefList: Def . DefList

    error   shift, and go to state 30
    TYPE    shift, and go to state 2
    STRUCT  shift, and go to state 3

    INT     reduce using rule 42 (DefList)
    FLOAT   reduce using rule 42 (DefList)
    ID      reduce using rule 42 (DefList)
    RETURN  reduce using rule 42 (DefList)
    IF      reduce using rule 42 (DefList)
    WHILE   reduce using rule 42 (DefList)
    MINUS   reduce using rule 42 (DefList)
    NOT     reduce using rule 42 (DefList)
    LP      reduce using rule 42 (DefList)
    LC      reduce using rule 42 (DefList)
    RC      reduce using rule 42 (DefList)

    Specifier        go to state 31
    StructSpecifier  go to state 8
    DefList          go to state 51
    Def              go to state 33


State 34

   28 ParamDec: error . RP
   29         | error . COMMA

    COMMA  shift, and go to state 52
    RP     shift, and go to state 53


State 35

   23 FunDec: ID LP RP .

    $default  reduce using rule 23 (FunDec)


State 36

   27 ParamDec: Specifier . VarDec

    ID  shift, and go to state 39

    VarDec  go to state 54


State 37

   22 FunDec: ID LP VarList . RP

    RP  shift, and go to state 55


State 38

   25 VarList: ParamDec . COMMA VarList
   26        | ParamDec .

    COMMA  shift, and go to state 56

    $default  reduce using rule 26 (VarList)


State 39

   19 VarDec: ID .

    $default  reduce using rule 19 (VarDec)


State 40

   11 ExtDecList: VarDec COMMA ExtDecList .

    $default  reduce using rule 11 (ExtDecList)


State 41

   21 VarDec: VarDec LB error . RB

    RB  shift, and go to state 57


State 42

   20 VarDec: VarDec LB INT . RB

    RB  shift, and go to state 58


State 43

    7 ExtDef: Specifier FunDec error SEMI .

    $default  reduce using rule 7 (ExtDef)


State 44

   31 CompSt: LC error . RC
   44 Def: error . SEMI

    SEMI  shift, and go to state 46
    RC    shift, and go to state 59


State 45

   30 CompSt: LC DefList . StmtList RC

    INT     shift, and go to state 60
    FLOAT   shift, and go to state 61
    ID      shift, and go to state 62
    RETURN  shift, and go to state 63
    IF      shift, and go to state 64
    WHILE   shift, and go to state 65
    MINUS   shift, and go to state 66
    NOT     shift, and go to state 67
    LP      shift, and go to state 68
    LC      shift, and go to state 28

    $default  reduce using rule 33 (StmtList)

    CompSt    go to state 69
    StmtList  go to state 70
    Stmt      go to state 71
    Exp       go to state 72


State 46

   44 Def: error SEMI .

    $default  reduce using rule 44 (Def)


State 47

   20 VarDec: VarDec . LB INT RB
   21       | VarDec . LB error RB
   47 Dec: VarDec .
   48    | VarDec . ASSIGNOP Exp

    ASSIGNOP  shift, and go to state 73
    LB        shift, and go to state 26

    $default  reduce using rule 47 (Dec)


State 48

   43 Def: Specifier DecList . SEMI

    SEMI  shift, and go to state 74


State 49

   45 DecList: Dec .
   46        | Dec . COMMA DecList

    COMMA  shift, and go to state 75

    $default  reduce using rule 45 (DecList)


State 50

   14 StructSpecifier: STRUCT OptTag LC DefList RC .

    $default  reduce using rule 14 (StructSpecifier)


State 51

   41 DefList: Def DefList .

    $default  reduce using rule 41 (DefList)


State 52

   29 ParamDec: error COMMA .

    $default  reduce using rule 29 (ParamDec)


State 53

   28 ParamDec: error RP .

    $default  reduce using rule 28 (ParamDec)


State 54

   20 VarDec: VarDec . LB INT RB
   21       | VarDec . LB error RB
   27 ParamDec: Specifier VarDec .

    LB  shift, and go to state 26

    $default  reduce using rule 27 (ParamDec)


State 55

   22 FunDec: ID LP VarList RP .

    $default  reduce using rule 22 (FunDec)


State 56

   25 VarList: ParamDec COMMA . VarList

    error   shift, and go to state 34
    TYPE    shift, and go to state 2
    STRUCT  shift, and go to state 3

    Specifier        go to state 36
    StructSpecifier  go to state 8
    VarList          go to state 76
    ParamDec         go to state 38


State 57

   21 VarDec: VarDec LB error RB .

    $default  reduce using rule 21 (VarDec)


State 58

   20 VarDec: VarDec LB INT RB .

    $default  reduce using rule 20 (VarDec)


State 59

   31 CompSt: LC error RC .

    $default  reduce using rule 31 (CompSt)


State 60

   65 Exp: INT .

    $default  reduce using rule 65 (Exp)


State 61

   66 Exp: FLOAT .

    $default  reduce using rule 66 (Exp)


State 62

   60 Exp: ID . LP Args RP
   61    | ID . LP RP
   64    | ID .

    LP  shift, and go to state 77

    $default  reduce using rule 64 (Exp)


State 63

   36 Stmt: RETURN . Exp SEMI

    INT    shift, and go to state 60
    FLOAT  shift, and go to state 61
    ID     shift, and go to state 62
    MINUS  shift, and go to state 66
    NOT    shift, and go to state 67
    LP     shift, and go to state 68

    Exp  go to state 78


State 64

   37 Stmt: IF . LP Exp RP Stmt
   38     | IF . LP Exp RP Stmt ELSE Stmt
   40     | IF . LP Exp RP error ELSE Stmt

    LP  shift, and go to state 79


State 65

   39 Stmt: WHILE . LP Exp RP Stmt

    LP  shift, and go to state 80


State 66

   58 Exp: MINUS . Exp
